drrx/fixtures/invalid/invalid-multi-branch.tree.drrx
.                         # root
+:-- bad/                 # EXPECTED ERROR: FW.07 only one branch marker allowed ('+' or ':')
